--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Pandora's Box: Personality Prediction"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/personality.png'>"
+excerpt: "Natural Language Processing on a Self-Annotated Reddit Dataset <br/><img src='/images/personality.png'>"
 collection: portfolio
 ---
 
