--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,13 @@
 ---
 title: "Pandora's Box: Personality Prediction"
-excerpt: "Natural Language Processing on a Self-Annotated Reddit Dataset <br/><img src='/images/personality.png'>"
+excerpt: "Natural Language Processing using a Self-Annotated Reddit Dataset <br/><img src='/images/personality.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+We take a look at the step-by-step process of using natural language processing techniques for the task of personality prediction. 
+1) Exploratory Data Analysis 
+2) Data Preprocessing for PyTorch
+3) Classification using Transformers
+4) Explainability using LIME 
+
+
